fix: background line stretch width

--- a/app/scss/delivery.scss
+++ b/app/scss/delivery.scss
@@ -1,6 +1,6 @@
 .delivery {
 	margin-top: 200px;
-	background: url(../img/delivery/background-line-1.svg) center / contain no-repeat;
+	background: url(../img/delivery/background-line-1.svg) center / 100% 100% no-repeat;
 
 	@media (max-width: 1199px) {
 		margin-top: 150px;
