--- a/app/scss/present.scss
+++ b/app/scss/present.scss
@@ -1,5 +1,5 @@
 .present {
-	background: url(../img/present/background-line-1.svg) center / contain no-repeat;
+	background: url(../img/present/background-line-1.svg) center / 100% 100% no-repeat;
 
 	// .present__body
 
